--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+}
+.shop-box{
+  width: 100%;
+  height: 100vh;
+}
+.shop-head{
+  width: 100%;
+  height: 3rem;
+  border: 1px solid rgb(162, 162, 162);
+  display: flex;
+  align-items: center;
+}
+.shop-head ul{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  list-style: none;
+
+}
+.shop-head ul li:nth-child(1){
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: white;
+  background: #31d431;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: sans-serif;
+  padding: 0 10px;
+}
+.fa-angle-down{
+  margin-left: 3rem;
+}
+.shop-head ul li:nth-child(2){
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 500;
+  font-family: sans-serif;
+  padding: 0 19px;
+  color: rgb(91, 91, 91);
+}
+.fa-tag{
+  color: red;
+  font-size: 25px;
+  margin-right: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* dropdown */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dropdown-main{
+  width: 290px;
+  height: 100%;
+  position: relative;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dropdown-main ul{
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  list-style: none;
+}
+.dropdown-main ul li{
+  border-top: 1px solid rgb(171, 171, 171);
+  font-size: 18px;
+  font-weight: 600;
+  font-family: sans-serif;
+  color: #727272;
+  padding: 10px 0 10px 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.dropdown-main-sub{
+  position: absolute;
+  width: 270px;
+  height: 100%;
+  background: #a9a9a936; 
+  left: 18rem;
+  top: 0;
+}
+.dropdown-main-sub ul{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}
+.dropdown-main-sub ul li{
+  font-size: 18px;
+  font-weight: 600;
+  font-family: sans-serif;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
